...
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:context="com.example.activities.HomeActivity">

			<TextView
				android:id="@+id/reminder_subtitle"
				android:layout_width="258dp"
				android:layout_height="88dp"
				android:layout_marginStart="88dp"
				android:text="@string/TextRappel"
				android:textSize="15sp"
				android:textStyle="italic"
...
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<EditText
				android:id="@+id/date_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border_black"
...
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/date_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/description_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border_black"
...
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@+id/date_edit"
				app:layout_constraintTop_toBottomOf="@+id/description_edit" />

			<Button
				android:id="@+id/validateButton"
				android:layout_width="130dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="60dp"
				android:layout_marginTop="16dp"
				android:layout_marginBottom="70dp"
				android:background="@drawable/background_button"
...
				android:layout_marginTop="20dp"
				android:background="@drawable/background_button"
				android:theme="@style/ButtonMedicineStyle"
				android:text="@string/ajouter"
				app:backgroundTint="@null"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/recyclerViewReminder" />

			<TextView
				android:id="@+id/dateTextInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#FF0000"
...
