<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!-- Votre contenu de mise en page actuel reste inchangé -->

		<Button
			android:id="@+id/button_modify"
			android:layout_width="214dp"
			android:layout_height="51dp"
			android:layout_marginStart="96dp"
			android:layout_marginTop="37dp"
			android:background="@drawable/background_button"
			android:text="Modifier"
			android:theme="@style/ButtonMedicineStyle"
			app:backgroundTint="@null"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_takeMedicine" />

		<Button
			android:id="@+id/button_takeMedicine"
			android:layout_width="214dp"
			android:layout_height="51dp"
			android:layout_marginStart="96dp"
			android:layout_marginTop="96dp"
			android:background="@drawable/background_button"
			android:text="Prendre le médicament"
			app:backgroundTint="@null"
			android:theme="@style/ButtonMedicineStyle"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/button_reminder"
			android:layout_width="214dp"
			android:layout_height="51dp"
			android:layout_marginStart="96dp"
			android:layout_marginTop="37dp"
			android:background="@drawable/background_button"
			android:text="Rappel"
			android:theme="@style/ButtonMedicineStyle"
			app:backgroundTint="@null"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_modify" />

		<Button
			android:id="@+id/button_remove"
			android:layout_width="214dp"
			android:layout_height="51dp"
			android:layout_marginStart="96dp"
			android:layout_marginTop="37dp"
			android:background="@drawable/background_button"
			android:text="Supprimer"
			android:theme="@style/ButtonMedicineStyle"
			app:backgroundTint="@null"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_reminder" />

		<Button
			android:id="@+id/button_retour"
			android:layout_width="214dp"
			android:layout_height="51dp"
			android:layout_marginStart="96dp"
			android:layout_marginTop="37dp"
			android:background="@drawable/background_button"
			android:text="@string/retour"
			android:theme="@style/ButtonMedicineStyle"
			app:backgroundTint="@null"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_remove" />


		<androidx.fragment.app.FragmentContainerView
			android:id="@+id/fragmentContainerView"
			android:name="com.example.fragments.NavigationBarFragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:layout="@layout/fragment_navigation_bar" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
