<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="400dp"
	android:layout_height="wrap_content"
	android:layout_alignParentEnd="true"
	android:layout_marginTop="25dp"
	android:layout_marginEnd="246dp"
	android:layout_marginBottom="25dp">

	<Button
		android:id="@+id/deleteButton"
		android:layout_width="130dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="72dp"
		android:layout_marginTop="60dp"
		android:background="@drawable/background_button"
		android:text="@string/supprimer"
		app:backgroundTint="@null"
		app:layout_constraintStart_toEndOf="@+id/number_reminder_edit"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/descriptionTextInfo2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#FF0000"
		app:layout_constraintStart_toStartOf="@+id/number_reminder_edit"
		app:layout_constraintTop_toBottomOf="@+id/number_reminder_edit" />

	<TextView
		android:id="@+id/descriptionTextInfo3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#FF0000"
		app:layout_constraintStart_toStartOf="@+id/number_reminder_edit"
		app:layout_constraintTop_toBottomOf="@+id/notification_time_edit" />

	<View
		android:id="@+id/view2"
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:layout_marginTop="10dp"
		android:background="#FF909090"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/view3"
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:layout_marginTop="8dp"
		android:background="#FF909090"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/monday_button" />

	<TextView
		android:id="@+id/monday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="20dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/monday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toStartOf="@+id/days_reminder_title"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/tuesday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/tuesday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/monday_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/wednesdey_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/wednesday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/tuesday_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/thursday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/thursday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/wednesdey_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/friday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/friday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/thursday_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/saturday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/saturday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/friday_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/sunday_button"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="5dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:gravity="center"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:text="@string/sunday_mini"
		android:textColor="@color/black"
		android:textSize="30sp"
		app:layout_constraintStart_toEndOf="@+id/saturday_button"
		app:layout_constraintTop_toBottomOf="@+id/days_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<EditText
		android:id="@+id/notification_time_edit"
		android:layout_width="154dp"
		android:layout_height="53dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:drawableStart="@drawable/time"
		android:focusable="false"
		android:hint="@string/notification_time_edit_hint"
		android:inputType="number"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:textColorHint="#8E8E8E"
		android:textSize="25dp"
		app:layout_constraintStart_toStartOf="@+id/hour"
		app:layout_constraintTop_toBottomOf="@+id/hour"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<EditText
		android:id="@+id/number_reminder_edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="16dp"
		android:background="@drawable/edit_text_manual_filling_border"
		android:drawableStart="@drawable/pill"
		android:drawablePadding="10dp"
		android:hint="@string/number_reminder_edit_hint"
		android:inputType="number"
		android:paddingLeft="10dp"
		android:paddingTop="2dp"
		android:paddingRight="10dp"
		android:paddingBottom="2dp"
		android:textColorHint="#8E8E8E"
		app:layout_constraintStart_toStartOf="@+id/hour"
		app:layout_constraintTop_toBottomOf="@+id/number_reminder_title"
		app:layout_constraintWidth_percent="0.35"
		app:tint="#FF0000" />

	<TextView
		android:id="@+id/hour"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="Heure"
		android:textColor="#000000"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/view2" />

	<TextView
		android:id="@+id/number_reminder_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:text="@string/number_reminder_title"
		android:textColor="#000000"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/notification_time_edit" />

	<TextView
		android:id="@+id/days_reminder_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/days_reminder_title"
		android:textColor="#000000"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="@+id/number_reminder_edit"
		app:layout_constraintTop_toBottomOf="@+id/number_reminder_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>