...
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
		app:layout_constraintTop_toTopOf="parent">


		<TextView
			android:id="@+id/pasMedoc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/no_registered_medication"
			android:textColor="@color/medication_stock_main"
			android:textSize="18sp"
			android:textStyle="italic"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerViewMedicine"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			app:layoutManager="GridLayoutManager"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
...
